# cat-lisper.github.io

./: .gitignore  CHANGELOG.md  LICENSE  README.md  about.rst  ciccabruno.cabal  contact.markdown  index.html  myblog.cabal  stack.yaml
_site/: about.html  archive.html  contact.html  index.html
_site/css/: default.css
_site/posts/: 2024-12-10.html  2024-12-20.html  2025-1-15.html
css/: default.css
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
posts/: #2024-12-10.markdown#  2024-1-15.markdown  2024-12-03.markdown  2024-12-04.markdown  2024-12-10.markdown  2025-1-15.markdown
templates/: default.html
