cabal-version:       2.2

name:                ciccabruno
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/BrunoCiccarino/ciccabruno#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Bruno Ciccarino
maintainer:          brunociccarinoo@gmail.com
copyright:           2024 @BrunoCiccarino
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable site
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
